[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
publish = false
authors = ["Simon Hyll <hyllsimon@gmail.com>"]
repository = "https://github.com/se-pacifist/ahabs-harbor"
license = "LICENSE.md"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
opt-level = 3
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false

[workspace.dependencies]
tauri = "2.0.0-alpha"
tauri-build = "2.0.0-alpha"
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
serde = "1.0"
serde_json = "1.0"
